syntax = "proto3";

option csharp_namespace = "GrpcTaxaDeJuros";

package TaxaDeJurosApi;

service TaxaDeJuros {

}
